--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.341.0",
-    "next": "14.1.0",
+    "next": "^15.5.7",
     "react": "^18",
     "react-dom": "^18"
   },
